# spring-practice

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
cpp-labs/: .clang-tidy  CMakeLists.txt
cpp-labs/src/app/app/: main.cpp
cpp-labs/src/libcsc/: CMakeLists.txt
cpp-labs/src/libcsc/libcsc/time/: time.cpp  time.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libcsc/: CMakeLists.txt
src/libcsc/libcsc/list/: list.hpp
src/libcsc/libcsc/soundex/: soundex.cpp  soundex.hpp
src/libcsc/libcsc/time/: time.cpp  time.hpp
src/soundex_groupby/: CMakeLists.txt
src/soundex_groupby/soundex_groupby/: main.cpp
test/libcsc/: CMakeLists.txt
test/libcsc/libcsc/: list.cpp  soundex.cpp  time.cpp
